--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,8 @@
 
 :root {
   /* colors */
-  --link-color: #FE74E8;
-  --link-hover-color: #FE74E8;
+  --link-color: #E01783;
+  --link-hover-color: #E01783;
   --background-color: #FFFCFB;
   --light-color: #eee;
   --dark-color: #ccc;
